tests/paczka1/fuzzy1/78864269.err
Error in line 1: EWequ4 A98 69,3
Error in line 19: 2kL10Mp S459 72,7
Error in line 20: 2kL10Mp A98 45,0
Error in line 12: 0imw5vZ S459 232,3
Error in line 23: 0imw5vZ A98 7,5
